Add explanation on gforge/fusionforge package names mix
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/branches/Branch_5_0@9349 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/debian/README.Debian.tmpl
+++ b/gforge/debian/README.Debian.tmpl
@@ -1,6 +1,13 @@
 @FORGENAME@ for Debian
 =================
 
+@FORGENAME@ is packaged for Debian, and was formerly packaged under
+the 'gforge' source package name. Even though a transition is in
+progress towards renaming it widely, only high-level meta-packages are
+named with the '@FORGENAME@' prefix. The rest of the packages are
+still named with the 'gforge-' prefix, so expect most paths and
+filenames to still be named in relation to 'gforge'.
+
 Status
 ------
 Want to know what the status of this package is?  Read
