Add a warning in the admin area if php register_globals is On.
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9496 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/www/themes/css/fusionforge.css
+++ b/gforge/www/themes/css/fusionforge.css
@@ -97,3 +97,14 @@ table.progress :link:hover, table.progress :visited:hover {
 }
 table.progress td { background: #fff; padding: 0 }
 table.progress td :hover { background: none }
+
+/* style for warning messages box
+*/
+.warning_msg {
+    font-weight: bold;
+    border-width: 2px;
+    border-style: solid;
+    background-color: #ffd297; /* orange */
+    border-color: #FFA500; /* orange */
+    padding: 0.5em;
+}
