--- a/gforge/www/themes/gforge/css/theme.css
+++ b/gforge/www/themes/gforge/css/theme.css
@@ -7,7 +7,7 @@
  */
 
 /* HTML elements */
-body {color: rgb(68, 68, 68); background-color: rgb(247, 247, 247); text-align: left; }
+body {font-size:85%;font-family:"verdana"; color: rgb(68, 68, 68); background-color: rgb(247, 247, 247); text-align: left; }
 form {margin:0; }
 img {border:0; }
 h1 {margin:0; }
