Make font-selection non-M$-specific
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9680 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/plugins/mediawiki/mediawiki-skin/fusionforge/fusionforge.css
+++ b/gforge/plugins/mediawiki/mediawiki-skin/fusionforge/fusionforge.css
@@ -5,8 +5,8 @@
 #column-one { padding-top: 0px; }
 */
 /* use the font inherited from FF */
-body {font-size:85%;font-family:"verdana"; color: rgb(68, 68, 68); background-color: rgb(247, 247, 247); text-align: left; };
-td.mainCanvas { font-size:85%;font-family:"verdana"; }
+body {font-size:85%;font-family:"verdana",sans-serif;color:rgb(68,68,68);background-color:rgb(247,247,247);text-align:left; };
+td.mainCanvas { font-size:85%;font-family:"verdana",sans-serif; }
 
 table { background-color: transparent; }
 
