allow file upload for per-project wgLogo
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9706 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/www/themes/css/gforge.css
+++ b/gforge/www/themes/css/gforge.css
@@ -418,3 +418,10 @@ A.lnkutility:hover { COLOR: #ffffff }
 .artifact_closed { text-decoration: line-through; }
 .task_closed { text-decoration: line-through; }
 
+.boxed_wgLogo {
+  width:135px;
+  height:135px;
+  border:1px solid #CCCCCC;
+  margin:1px;
+  padding:1px;
+}
