Fix in widgets css file
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10096 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/src/www/widgets/style.css
+++ b/src/www/widgets/style.css
@@ -142,8 +142,7 @@
 }
 .widget-preview-mybookmarks-en_US {
     background-image:url('../images/widget-preview-my_bookmarks-en_US.png');
-
-
+}
 .widget-preview-mysurveys-fr_FR {
     background-image:url('../images/widget-preview-my_surveys-fr_FR.png');
 }
@@ -185,7 +184,7 @@
 }
 .widget-preview-projectpublicareas-en_US {
     background-image:url('../images/widget-preview-project_public_areas-en_US.png');
-
+}
 .widget-preview-projectdescription-fr_FR {
     background-image:url('../images/widget-preview-project_description-fr_FR.png');
 }
