Display all errors directly on the page for non development or integration env.
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10120 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/src/www/themes/css/fusionforge.css
+++ b/src/www/themes/css/fusionforge.css
@@ -338,3 +338,25 @@ table.progress td :hover { background: none }
     background-image:url('../../images/widget/widget-preview-project_svn-stats.png');
 }
 /* }}} */
+
+#ffErrors {
+	z-index: 10;
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	right: 10px;
+	opacity: 0.9;
+	color: black;
+    font-weight: bold;
+    border-width: 2px;
+    border-style: solid;
+    background-color: #ffc0cb; /* pink */
+    border-color: red;
+    padding: 0.5em;
+}
+
+#ffErrors .error {
+    border-width: 0px;
+    padding: 0px;
+	color: red;
+}
