--- a/src/www/themes/gforge/css/theme-pages.css
+++ b/src/www/themes/gforge/css/theme-pages.css
@@ -154,3 +154,54 @@
 #user-profile-homepage {
     
 }
+
+/*
+ * PAGE: docman (eg: http://fusionforge/docman/?group_id=<id>)
+ *
+ */
+.docman_h3 {
+}
+
+.docman_h4 {
+    padding: 0px;
+    margin: 2px;
+    font-style: italic;
+}
+
+.docman_div_include {
+    border-style: solid;
+    border-color: #C2C7D1;
+    border-width: 1px;
+    padding: 2px;
+    margin-bottom: 5px;
+}
+
+.docmanDivIncluded {
+    font-size: 0.95em;
+}
+
+.docmanSubmitDiv input {
+    margin: 5px;
+}
+
+.docmanDiv {
+    padding-bottom: 5px;
+    font-size: 0.9em;
+}
+
+.docmanDiv table {
+    border-style: solid;
+    border-color: #C2C7D1;
+    border-width: 1px;
+    border-collapse: collapse;
+    text-align: left;
+    vertical-align: center;
+}
+
+.docmanDiv td, .docmanDiv th {
+    border-style: solid;
+    border-color: #C2C7D1;
+    border-width: 1px;
+    border-collapse: collapse;
+    padding: 3px;
+}
