html_image() cleanup.
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10425 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/src/www/themes/gforge-classic/css/theme.css
+++ b/src/www/themes/gforge-classic/css/theme.css
@@ -19,6 +19,7 @@ h6 { font-size: xx-small; font-family: verdana,arial,helvetica,sans-serif; }
 
 pre,tt { font-family: courier,sans-serif }
 
+img { border: 0; vertical-align: middle; }
 
 a:link { text-decoration:none; color: #0000be }
 a:visited { text-decoration:none; color: #0000be }
