--- a/src/plugins/wiki/www/themes/Wordpress/templates/editpage.tmpl
+++ b/src/plugins/wiki/www/themes/Wordpress/templates/editpage.tmpl
@@ -1,5 +1,5 @@
 <?php // -*-php-*-
-// rcs_id('$Id: editpage.tmpl 7589 2010-07-02 07:31:33Z vargenau $');
+// rcs_id('$Id: editpage.tmpl 7678 2010-09-08 11:17:03Z vargenau $');
 /*
  * FIXME: Hack!
  * The funky URL used for the form action parameter is bogus.
@@ -21,7 +21,7 @@
     <?php echo $PAGE_LOCKED_MESSAGE ?>
     <?php echo $CONCURRENT_UPDATE_MESSAGE ?>
     <?php if (!$IS_CURRENT) { ?>
-      <p><strong><?php echo _("Warning: You are editing an old revision.")?>
+      <p class="warning_msg"><strong><?php echo _("Warning: You are editing an old revision.")?>
             <?php echo _("Saving this page will overwrite the current version.")?></strong></p>
     <?php } ?>
   </td>
