Update Phpwiki templates
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10443 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/src/plugins/wiki/www/themes/Portland/templates/editpage.tmpl
+++ b/src/plugins/wiki/www/themes/Portland/templates/editpage.tmpl
@@ -1,5 +1,5 @@
 <?php // -*-php-*-
-// rcs_id('$Id: editpage.tmpl 7589 2010-07-02 07:31:33Z vargenau $');
+// rcs_id('$Id: editpage.tmpl 7675 2010-09-03 13:08:03Z vargenau $');
 ?>
 <?php /*
  * FIXME: Hack!
@@ -20,7 +20,7 @@
     <?php echo $PAGE_LOCKED_MESSAGE ?>
     <?php echo $CONCURRENT_UPDATE_MESSAGE ?>
     <?php if (!$IS_CURRENT) { ?>
-      <p><strong><?php echo _("Warning: You are editing an old revision.")?>
+      <p class="warning_msg"><strong><?php echo _("Warning: You are editing an old revision.")?>
             <?php echo _("Saving this page will overwrite the current version.")?></strong></p>
     <?php } ?>
   </td>
