--- a/src/plugins/wiki/www/themes/Portland/templates/viewsource.tmpl
+++ b/src/plugins/wiki/www/themes/Portland/templates/viewsource.tmpl
@@ -1,28 +1,21 @@
 <?php // -*-php-*-
-// rcs_id('$Id: viewsource.tmpl 7589 2010-07-02 07:31:33Z vargenau $');
+// rcs_id('$Id: viewsource.tmpl 7675 2010-09-03 13:08:03Z vargenau $');
 ?>
-
 <?php if ($page->get('locked') && !$user->isAdmin()) { ?>
-  <p><strong><?php echo _("Note:")?></strong>
-  <?php echo _("This page has been locked by the administrator and cannot be edited.")?></p>
+  <p class="warning_msg"><strong><?php echo _("Note:")?></strong>
+  <?php echo _("This page has been locked and cannot be edited.")?></p>
 <?php } ?>
-
 <?php if ($revision and !$revision->isCurrent()) { ?>
-  <p><?php echo _("You are viewing an old revision of this page.")?>
-  <?php echo Button('viewsource', _("View the current version"), $page)?>.</p>
+  <p class="warning_msg"><?php echo _("You are viewing an old revision of this page.")?>
+  <?php echo Button('viewsource', _("View the current version."), $page)?></p>
 <?php } ?>
-
-<!-- Dummy form else NS4 does not like the textarea -->
-<form method="post" action="<?php echo $request->getPostURL()?>" accept-charset="<?php echo CHARSET?>">
 <textarea class="wikiedit"
           name="content"
           rows="<?php echo $request->getPref('editHeight')?>"
           cols="<?php echo $request->getPref('editWidth')?>"
-	  readonly="readonly"
-          ><?php echo $PAGE_SOURCE ?></textarea>
-<?php echo HiddenInputs($request->getArgs()) ?>
-</form>
+          readonly="readonly"
+><?php echo $PAGE_SOURCE ?></textarea>
 <hr />
-<a href="<?php echo WikiURL($page,array('action'=>_("PageHistory")))?>"
-   ><?php echo $WikiTheme->getLastModifiedMessage($revision) ?></a>
+<a href="<?php echo WikiURL($page,array('action'=>_("PageHistory")))?>">
+<?php echo $WikiTheme->getLastModifiedMessage($revision) ?></a>
 <br />
