exit functions migration
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10594 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/src/www/themes/gforge/css/theme.css
+++ b/src/www/themes/gforge/css/theme.css
@@ -323,3 +323,13 @@ ul.tabbernav li.tabberactive a:hover {
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
 }
+
+/* artifact
+----------- */
+.artifactmessage {
+    width: 100%;
+    background: white;
+    border: 0px;
+    height: 100px;
+
+}
