exit functions migration
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10635 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/src/www/themes/gforge/css/theme.css
+++ b/src/www/themes/gforge/css/theme.css
@@ -324,12 +324,8 @@ ul.tabbernav li.tabberactive a:hover {
     -moz-border-radius: 3px;
 }
 
-/* artifact
------------ */
-.artifactmessage {
-    width: 100%;
-    background: white;
-    border: 0px;
-    height: 100px;
-
+/* scm
+----------------------------------------------- */
+.scm {
+    width: 99%;
 }
