--- a/src/plugins/wiki/www/themes/fusionforge/templates/browse.tmpl
+++ b/src/plugins/wiki/www/themes/fusionforge/templates/browse.tmpl
@@ -1,14 +1,20 @@
 <?php // -*-php-*-
-// rcs_id('$Id: browse.tmpl 7593 2010-07-02 09:04:25Z vargenau $');
+// rcs_id('$Id: browse.tmpl 7706 2010-09-22 14:39:24Z vargenau $');
 ?>
 <?php
 $curuserprefs = $user->getPreferences();
 ?>
 
+<?php if ($page->exists() and $revision and $revision->hasDefaultContents()) { ?>
+  <p class="error"><strong><?php echo _("Error:")?></strong>
+  <?php echo _("This revision of the page does not exist.")?>
+  <?php echo Button('browse', _("View the current version."), $page)?>
+  </p>
+<?php } else { ?>
 <?php if ($revision and !$revision->isCurrent()) { ?>
   <p class="warning_msg"><strong><?php echo _("Note:")?></strong>
-     <?php echo _("You are viewing an old revision of this page.")?>
-  <?php echo Button('browse', _("View the current version"), $page)?>.
+  <?php echo _("You are viewing an old revision of this page.")?>
+  <?php echo Button('browse', _("View the current version."), $page)?>
   </p>
 <?php } ?>
 <?php if (!empty($redirected)) { ?>
@@ -30,6 +36,8 @@ $curuserprefs = $user->getPreferences();
 <?php } ?>
 
 <?php echo $CONTENT?>
+
+<?php } ?>
 
 <div id="footer"><?php // for top & bottom toolbars stylesheet ?>
   <?php echo Template('browse-footer')?>
