* minor fix in Tracker CSS * starting to implement news banner
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10735 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/src/www/themes/funky/css/theme-pages.css
+++ b/src/www/themes/funky/css/theme-pages.css
@@ -224,3 +224,16 @@
     border-collapse: collapse;
     padding: 3px;
 }
+
+/*
+    tracker
+*/
+#trackermodform  table
+{
+    width: 100%;
+}
+
+#trackermodform  input[type=submit]
+{
+    float: right;
+}
