Fix [#202] FF 5.0.1 : Admin -> userlist
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10767 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/src/www/themes/css/fusionforge.css
+++ b/src/www/themes/css/fusionforge.css
@@ -56,6 +56,27 @@
 	position:absolute;
 }
 
+.active {
+	background-color: #99ff99; 
+	text-decoration: none; 
+	font-weight: normal
+	}
+
+.inactive {
+	background-color: #d3d3d3
+	}
+
+.deleted {
+	background-color: #99ffff
+	}
+
+.suspended {
+	background-color: #ffaa00
+	}
+
+.pending {
+	background-color: white
+	}
 
 /* Tag cloud
 ----------------------------------------------- */
