Reset body margin to 0 in gforge theme
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10809 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/src/www/themes/gforge/css/theme.css
+++ b/src/www/themes/gforge/css/theme.css
@@ -29,7 +29,7 @@
  */
 
 /* HTML elements */
-body {font-size:85%;font-family:"verdana",sans-serif;color:rgb(68,68,68);background-color:rgb(247,247,247);text-align:left; }
+body {font-size:85%;font-family:"verdana",sans-serif;color:rgb(68,68,68);background-color:rgb(247,247,247);text-align:left;margin:0; }
 form {margin:0; }
 img {border:0; }
 h1 {margin:0; }
