--- a/src/debian/README.Debian.tmpl
+++ b/src/debian/README.Debian.tmpl
@@ -12,7 +12,7 @@ Status
 ------
 Want to know what the status of this package is?  Read
 /usr/share/doc/@PACKAGE@/TODO.Debian or (even better)
-<https://fusionforge.org/mediawiki/index.php/Roadmap>.  If you miss a
+<https://fusionforge.org/plugins/mediawiki/wiki/fusionforge/index.php/Roadmap>.  If you miss a
 feature, or find a bug, or want to help, don't hesitate to contact me
 (Roland Mas <lolando@debian.org>) .  Plenty of features are missing,
 I'm working on some, but if you don't tell me which ones you miss the
