gforge-config is no more
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/branches/Branch_5_0@10877 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/debian/README.Debian.tmpl
+++ b/gforge/debian/README.Debian.tmpl
@@ -97,7 +97,7 @@ configuration options by :
      /usr/share/gforge/etc/local.d/ to /etc/gforge/local.d/ (TO BE
      DOCUMENTED PROPERLY !) )
  3. regenerate the runtime config files by issueing :
-      # gforge-config
+      # fusion-config
 
 Customizations in /etc/@FORGENAME@/@FORGENAME@.conf may include :
  - switching to HTTPS with 'sys_use_ssl=true',
