add missing css classes
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@11111 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/src/www/themes/funky/css/theme.css
+++ b/src/www/themes/funky/css/theme.css
@@ -723,7 +723,7 @@ a.topTabSelected:hover {
     margin-left: 3px;
 }
 
-.warning_msg, .warning, .tips {
+.warning_msg, .warning, .tips, .important, .veryimportant {
     border-width: 1px;
     border-style: solid;
     background-color: #ffd297; /* orange */
