--- a/src/plugins/wiki/www/themes/fusionforge/templates/html.tmpl
+++ b/src/plugins/wiki/www/themes/fusionforge/templates/html.tmpl
@@ -1,7 +1,5 @@
 <?php // -*-php-*-
-// rcs_id('$Id: html.tmpl 7666 2010-08-31 16:02:45Z vargenau $');
-?>
-<?php
+// $Id: html.tmpl 7720 2010-10-22 18:38:33Z vargenau $
 /*
  * No header for FusionForge (already provided)
  */
