--- a/src/plugins/wiki/www/themes/fusionforge/templates/login.tmpl
+++ b/src/plugins/wiki/www/themes/fusionforge/templates/login.tmpl
@@ -1,5 +1,5 @@
 <?php // -*-php-*-
-// rcs_id('$Id: login.tmpl 7660 2010-08-31 15:03:30Z vargenau $');
+// $Id: login.tmpl 7720 2010-10-22 18:38:33Z vargenau $
 ?>
 <?php if ($fail_message) { ?>
   <div class="error"><p><?php echo $fail_message?></p></div>
