--- a/src/plugins/wiki/www/themes/fusionforge/templates/navbar.tmpl
+++ b/src/plugins/wiki/www/themes/fusionforge/templates/navbar.tmpl
@@ -1,7 +1,6 @@
 <?php // -*-php-*-
-// rcs_id('$Id: navbar.tmpl 7660 2010-08-31 15:03:30Z vargenau $');
-?>
-<?php 
+// $Id: navbar.tmpl 7720 2010-10-22 18:38:33Z vargenau $
+
 $curuserprefs = $user->getPreferences();
 $dbh = $request->getDbh();
 $username = $user->UserName();
