--- a/src/plugins/wiki/www/themes/fusionforge/templates/userprefs.tmpl
+++ b/src/plugins/wiki/www/themes/fusionforge/templates/userprefs.tmpl
@@ -1,7 +1,5 @@
 <?php // -*-php-*-
-// rcs_id('$Id: userprefs.tmpl 7660 2010-08-31 15:03:30Z vargenau $');
-?>
-<?php
+// $Id: userprefs.tmpl 7720 2010-10-22 18:38:33Z vargenau $'
 // Todo: Move the logic and code to the plugin
 // This is very experimental and the read-only part an ugly hack so far.
 foreach (explode(',','errmsg,isForm') as $var) {
@@ -9,7 +7,7 @@ foreach (explode(',','errmsg,isForm') as $var) {
 }
 
 $plugin = $request->getArg('pagename');
-if (isActionPage($request->getArg('pagename')) 
+if (isActionPage($request->getArg('pagename'))
     and $isForm and $plugin == _("PreferencesInfo")) {
     $isForm = false;
 }
@@ -130,44 +128,44 @@ if (!function_exists('selectedOption')) {
 $SelectThemes = ''; $SelectLanguages = '';
 $SelectThemesDesc = ''; $SelectLanguagesDesc = '';
 if ( $isForm ) {
-    $SelectOptions = HTML(); 
+    $SelectOptions = HTML();
     if (!empty($available_themes) and is_array($available_themes)) {
-	if (!$pref->get('theme') or $pref->get('theme') == THEME)
-	    $SelectOptions->pushContent(selectedOption("",_("<system theme>")));
-	else
-	    $SelectOptions->pushContent(unselectedOption("",_("<system theme>")));
-	foreach ($available_themes as $theme) {
-	    if ($theme == $pref->get('theme') and $theme != THEME)
-		$SelectOptions->pushContent(selectedOption($theme));
-	    else
-		$SelectOptions->pushContent(unselectedOption($theme));
-	}
-	$SelectThemes = HTML::select(array('name' => "pref[theme]",'id' => 'theme'),
-				     $SelectOptions);
-	$SelectThemesDesc = _("Personal theme:");
+        if (!$pref->get('theme') or $pref->get('theme') == THEME)
+            $SelectOptions->pushContent(selectedOption("",_("<system theme>")));
+        else
+            $SelectOptions->pushContent(unselectedOption("",_("<system theme>")));
+        foreach ($available_themes as $theme) {
+            if ($theme == $pref->get('theme') and $theme != THEME)
+                $SelectOptions->pushContent(selectedOption($theme));
+            else
+                $SelectOptions->pushContent(unselectedOption($theme));
+        }
+        $SelectThemes = HTML::select(array('name' => "pref[theme]",'id' => 'theme'),
+                                     $SelectOptions);
+        $SelectThemesDesc = _("Personal theme:");
     }
-    
+
     $SelectOptions = HTML();
     if (!empty($available_languages) and is_array($available_languages)) {
-	if (!$pref->get('lang') or $pref->get('lang') == DEFAULT_LANGUAGE)
-	    $SelectOptions->pushContent(selectedOption("",_("<system language>")));
-	else
-	    $SelectOptions->pushContent(unselectedOption("",_("<system language>")));
-	foreach ($available_languages as $lang) {
-	    if ($lang == $pref->get('lang') and $lang != DEFAULT_LANGUAGE)
-		$SelectOptions->pushContent(selectedOption($lang));
-	    else
-		$SelectOptions->pushContent(unselectedOption($lang));
-	}
-	$SelectLanguages = HTML::select(array('name' => "pref[lang]",'id' => 'lang'),
-					$SelectOptions);
-	$SelectLanguagesDesc = _("Personal language:");
+        if (!$pref->get('lang') or $pref->get('lang') == DEFAULT_LANGUAGE)
+            $SelectOptions->pushContent(selectedOption("",_("<system language>")));
+        else
+            $SelectOptions->pushContent(unselectedOption("",_("<system language>")));
+        foreach ($available_languages as $lang) {
+            if ($lang == $pref->get('lang') and $lang != DEFAULT_LANGUAGE)
+                $SelectOptions->pushContent(selectedOption($lang));
+            else
+                $SelectOptions->pushContent(unselectedOption($lang));
+        }
+        $SelectLanguages = HTML::select(array('name' => "pref[lang]",'id' => 'lang'),
+                                        $SelectOptions);
+        $SelectLanguagesDesc = _("Personal language:");
     } else {
-	if ($SelectThemes == '') {
-	    $appearance = false;
-	    $SelectThemesDesc = '';
-	    $SelectLanguagesDesc = '';
-	}
+        if ($SelectThemes == '') {
+            $appearance = false;
+            $SelectThemesDesc = '';
+            $SelectLanguagesDesc = '';
+        }
     }
 } else {
     $SelectThemesDesc = _("Personal theme:");
