--- a/src/plugins/wiki/www/themes/fusionforge/templates/blogform.tmpl
+++ b/src/plugins/wiki/www/themes/fusionforge/templates/blogform.tmpl
@@ -1,5 +1,5 @@
 <?php // -*- php -*-
-// rcs_id('$Id: blogform.tmpl 7589 2010-07-02 07:31:33Z vargenau $');
+// $Id: blogform.tmpl 7720 2010-10-22 18:38:33Z vargenau $
 ?>
 <div class="wikiblog wikiblog-form">
 <form action="<?php echo $request->getPostURL()?>" method="post" name="editpage"
