--- a/src/plugins/wiki/www/themes/fusionforge/templates/body.tmpl
+++ b/src/plugins/wiki/www/themes/fusionforge/templates/body.tmpl
@@ -1,5 +1,5 @@
 <?php // -*-php-*-
-// rcs_id('$Id: body.tmpl 7660 2010-08-31 15:03:30Z vargenau $');
+// $Id: body.tmpl 7720 2010-10-22 18:38:33Z vargenau $
 ?>
 <table width="100%" cellpadding="0" cellspacing="0">
 <tr>
