--- a/src/plugins/wiki/www/themes/fusionforge/templates/browse-footer.tmpl
+++ b/src/plugins/wiki/www/themes/fusionforge/templates/browse-footer.tmpl
@@ -1,4 +1,4 @@
 <?php // -*-php-*-
-// rcs_id('$Id: browse-footer.tmpl 7660 2010-08-31 15:03:30Z vargenau $');
+// $Id: browse-footer.tmpl 7720 2010-10-22 18:38:33Z vargenau $
 ?>
 <p class="editdate"><?php echo $WikiTheme->getOwnerMessage($page) ?>  <?php echo $WikiTheme->getLastModifiedMessage($revision) ?> <?php echo $WikiTheme->getAuthorMessage($revision) ?></p>
