--- a/src/plugins/wiki/www/themes/fusionforge/templates/browse.tmpl
+++ b/src/plugins/wiki/www/themes/fusionforge/templates/browse.tmpl
@@ -1,7 +1,6 @@
 <?php // -*-php-*-
-// rcs_id('$Id: browse.tmpl 7706 2010-09-22 14:39:24Z vargenau $');
-?>
-<?php
+// $Id: browse.tmpl 7720 2010-10-22 18:38:33Z vargenau $
+
 $curuserprefs = $user->getPreferences();
 ?>
 
