--- a/src/plugins/wiki/www/themes/fusionforge/templates/debug.tmpl
+++ b/src/plugins/wiki/www/themes/fusionforge/templates/debug.tmpl
@@ -1,5 +1,5 @@
 <?php // -*-php-*-
-// rcs_id('$Id: debug.tmpl 7660 2010-08-31 15:03:30Z vargenau $');
+// $Id: debug.tmpl 7720 2010-10-22 18:38:33Z vargenau $
 ?>
 <?php global $RUNTIMER; ?>
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
