--- a/src/plugins/wiki/www/themes/fusionforge/templates/editpage.tmpl
+++ b/src/plugins/wiki/www/themes/fusionforge/templates/editpage.tmpl
@@ -1,5 +1,5 @@
 <?php // -*-php-*-
-// rcs_id('$Id: editpage.tmpl 7675 2010-09-03 13:08:03Z vargenau $');
+// $Id: editpage.tmpl 7720 2010-10-22 18:38:33Z vargenau $
 ?>
 <?php if (isset($PREVIEW_CONTENT)) { ?>
   <p><strong><?php echo _("Preview only!  Changes not saved.")?></strong>
@@ -17,7 +17,7 @@
         <?php echo _("Saving this page will overwrite the current version.")?></strong></p>
 <?php } ?>
 <?php /*
- * FIXME: Hack! 
+ * FIXME: Hack!
  * The funky URL used for the form action parameter is bogus.
  * This is needed, otherwise the redirect to the real browser
  * page won't work with some browsers. (NS4 and Mozilla 0.97 won't accept
@@ -33,7 +33,7 @@
     <tr><td><?php echo $EDIT_TOOLBAR ?></td>
         <td align="right"><div id="editarea-size">
     <?php echo _("Size").':'?>
-    <label for="pref-editHeight"><b><?php echo _("H")?></b></label> <?php echo $HEIGHT_PREF?> 
+    <label for="pref-editHeight"><b><?php echo _("H")?></b></label> <?php echo $HEIGHT_PREF?>
     <label for="pref-editWidth"><b><?php echo _("W")?></b></label> <?php echo $WIDTH_PREF?>
     <noscript><?php echo Button("submit:", _("Adjust"), 'wikiaction')?></noscript>
   </div></td></tr></table>
@@ -44,12 +44,12 @@
 <table summary="Toolbar: Page editing options." class="toolbar" width="100%"
        cellpadding="0" cellspacing="0" border="0">
 <tr valign="middle">
-  <td> 
+  <td>
     <?php echo $MINOR_EDIT_CB ?> <label for="edit-minor_edit"><?php echo _("This is a minor change.")?></label><br />
   </td>
   <td align="center">
     <?php echo $PREVIEW_B ?>
-    <?php if ($SAVE_B)  { ?> 
+    <?php if ($SAVE_B)  { ?>
       <?php echo $SEP?><?php echo $SAVE_B ?>
     <?php } ?>
     <?php echo $SEP?><?php echo $CHANGES_B ?>
