--- a/src/plugins/wiki/www/themes/fusionforge/templates/ratings.tmpl
+++ b/src/plugins/wiki/www/themes/fusionforge/templates/ratings.tmpl
@@ -1,5 +1,5 @@
 <?php // -*-php-*-
-// rcs_id('$Id: ratings.tmpl 7660 2010-08-31 15:03:30Z vargenau $');
+// $Id: ratings.tmpl 7720 2010-10-22 18:38:33Z vargenau $
 ?>
 <?php if (!$WikiTheme->DUMP_MODE) {
   $loader = new WikiPluginLoader();
